# cdc_pdm_mic

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
example/: example.ipynb
firmware/: cdc_pdm.uf2
src/: main.c  pdm_cdc.py  pdm_microphone.pio  tusb_config.h  usb_descriptors.c
